--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -3,6 +3,7 @@
 <input type="text" class="form-control" ng-Model="serverName">
 <!--<p>{{ serverName}}</p>-->
 <button class='btn btn-primary' [disabled]= "!allowNewServer" (click) = "onCreateServer()">Add button</button>
-<p >{{serverCreationStatus}}</p>
+<!--<p>{{serverCreationStatus}}</p>-->
+<p *ngIf="serverCreated">Server was created, server name is {{serverName}}</p>
 <app-server></app-server>
 <app-server></app-server>
